--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
 <body onload="startTime()">
   <div class = "heading">
     <img class = "me" src = "memeish.jpg">
@@ -45,7 +46,7 @@
     </div>
 </div>
 <div class = "secPage">
-  <img class = "picsPage" src = "dittowall.jpg" id = "marathon">
+  <img class = "picsPage" src = "IMG_0466.jpg" id = "marathon">
   <img class = "picsPage" src = "dittowall.jpg" id = "track">
   <img class = "picsPage" src = "dittowall.jpg" id = "yea">
   <h1 id = "maraText"> hi </h1>
@@ -221,5 +222,8 @@
 </div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="indexTwo.js"></script>
+
+
+
 </body>
 </html>
