--- a/index.html
+++ b/index.html
@@ -1,229 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Phoebe</title>
-<link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="hangyul.jpeg" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>sign-in | phoebe wongphatarakul</title>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
-<body onload="startTime()">
-  <div class = "heading">
-    <img class = "me" src = "memeish.jpg">
-    <h1> Phoebe Wongphatarakul </h1>
-      <!-- <p><a href="about.html"> About </a></p>
-      <p><a href = "contact.html"> Contact </a></p>
-      <p><a href = "settings.html"> Settings </a></p> -->
-      <!-- <p class = "spaceRight"> bphoebew@gmail.com </p> -->
-      <img class = "IG" src = "IGICON.png">
-      <img class = "mailIcon" src = "mailTop.png">
-      <div id="clock"></div>
+  </head>
+  <body>
+    <div class = "sign">
+      <input type="image" src="memeish.jpg" name="button" class="profile"/>
+      <h1> Phoebe <br>Wongphatarakul </h1>
+      <div class = "hide">
+      <input type="password" name="pass" placeholder="Enter Password" class = "pass">
+      <a href = "home.html"><input type="image" src="https://image.flaticon.com/icons/png/512/54/54661.png" name="button" class="back"/></a>
+    </div>
   </div>
-
-  <div class = "aboutAll">
-    <div id="mydiv">
-      <div id="mydivheader">
-      <button id="btn_popup">
-        <input type="image" src="aboutFolder.png" name="button" class="about"/>
-        <p class = "backgroundPopText"> About </p>
-      </button>
-      </div>
-      </div>
-      <div id="smoke"></div>
-      <div id="popup">
-        <div id="popup_bar">About Me<span id="btn_close">X</span></div>
-<div class = "firstPage">
-      <div class = "flexTitle">
-        <img class = "phoebeImage" src = "phoebeAbout.jpg">
-        <div class = "nameFlex">
-        <p class = "nameText">Phoebe</p>
-        <p class = "nameText">Wongphatarakul</p>
-        <p class = "descriptions"> just a girl who loves creative coding and solving problems of the world </p>
-        <p class = "descriptions"> AND </p>
-        <p class = "descriptions"> eating rice krispy treats </p>
-      </div>
-    </div>
-</div>
-<div class = "secPage">
-  <img class = "picsPage" src = "IMG_0466.jpg" id = "marathon">
-  <img class = "picsPage" src = "dittowall.jpg" id = "track">
-  <img class = "picsPage" src = "dittowall.jpg" id = "yea">
-  <h1 id = "maraText"> hi </h1>
-  <h1 id = "trackText">hello </h1>
-  <h1 id = "yeaText"> hey </h1>
-</div>
-<div class = "thirdPage">
-  <img class = "picsPage" src = "memeish.jpg">
-  <img class = "picsPage" src = "memeish.jpg">
-  <img class = "picsPage" src = "memeish.jpg">
-</div>
-    <div class = "lineFlex">
-      <hr class = "lineAbout" align = "center" color = "#0b6069">
-    </div>
-    <div class = "arrows">
-      <input type = "image" src = "https://www.stickpng.com/assets/images/585e473bcb11b227491c3381.png" name = "button" class = "leftArrow">
-      <input type = "image" src = "https://cdn1.iconfinder.com/data/icons/mini-solid-icons-vol-1/16/24-512.png" name = "button" class = "rightArrow">
-    </div>
-        </div>
-    </div>
-<div class = "aboutIphone">
-  <a href = "about.html"><input type="image" src="aboutApp.png" name="button" class = "aboutP"/></a>
-</div>
-    <div class = "projectsAll">
-      <div id="mydivTwo">
-        <div id="mydivheader">
-        <button id="btn_popupTwo">
-          <input type="image" src="projectsFolder.png" name="button" class="projects"/>
-          <p class = "backgroundPopText"> Projects </p>
-        </button>
-        </div>
-        </div>
-        <div id="smokeTwo"></div>
-        <div id="popupTwo">
-          <div id="popup_barTwo">Projects<span id="btn_closeTwo">X</span></div>
-          <div class = "menuProject">
-            <input type="image" src="pseudo.png" name="button" class="pseudo"/>
-            <p class = "pseudoText"> PSEUDO </p>
-            <input type="image" src="justCode.png" name="button" class="justCode"/>
-            <p class = "justCodeText"> JUST CODING THINGS </p>
-            <input type="image" src="redesign.png" name="button" class="redesign"/>
-            <p class = "redesignText"> REDESIGN & <br> CREATE</p>
-          </div>
-          <div class = "pseudoPage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
-            <h1 class = "projectTitleF">Pseudo </h1>
-            <p class = "projectPara">a game falksdjflkd </p>
-          </div>
-          <div class = "justCodePage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
-            <h1 class = "projectTitle">Just Coding Things </h1>
-            <p class = "projectPara"> an all-girls organization dedicated to helping <br>each other and others to know how to code </p>
-            <p class = "proText">Why Did I Start This Club?</p>
-            <p class = "proTextSub"></p>
-            <!-- <p class = "proTextTwo"> The Outcomes: </p> -->
-          </div>
-
-          <div class = "redesignPage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
-          </div>
-        </div>
-      </div>
-      <div class = "projectsIphone">
-        <a href = "projects.html"><input type="image" src="projectsApp.png" name="button" class = "projectsP"/></a>
-      </div>
-      <div class = "curositiesAll">
-        <div id="mydivThree">
-          <div id="mydivheader">
-          <button id="btn_popupThree">
-            <input type="image" src="curosityFolder.png" name="button" class="curosities"/>
-            <p class = "backgroundPopText"> Curosities </p>
-          </button>
-          </div>
-          </div>
-          <div id="smokeThree"></div>
-          <div id="popupThree">
-            <div id="popup_barThree">Curosities<span id="btn_closeThree">X</span></div>
-            <div class = "curosPageOne">
-              <img class = "picsPage" src = "memeish.jpg" id = "yayoi">
-              <img class = "picsPage" src = "memeish.jpg" id = "webDesign">
-              <img class = "picsPage" src = "memeish.jpg" id = "ar">
-            </div>
-          </div>
-        </div>
-<div class = "curositiesIphone">
-          <a href = "curosities.html"><input type="image" src="projectsApp.png" name="button" class = "curositiesP"/></a>
-</div>
-        <input type="image" src="table.png" name="button" class="table"/>
-        <div class = "homeIphone">
-          <a href = "index.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
-        </div>
-      <p>
-        <button id = "allMail" data-tooltip="Send Me Some Mail">
-        <a href="mailto:bphoebew@gmail.com" target="_top"><input type="image" src="mail.png" name="button" class="mail" id = "mailStop"/></a></button>
-      </p>
-  <div class = "paintTotal">
-          <p><button id = "allPaint" data-tooltip="Settings">
-          <input type="image" src="paint.png" name="button" class="paint" id = "paintStop"/></button></p>
-        <div id="smokePaint"></div>
-        <div id="popupPaint">
-          <div id="popup_barPaint">Settings<span id="btn_closePaint">X</span></div>
-          <p class = "subText">Change the Header Color</p>
-          <div class = "switchHead">
-            <input type="button" name="button" class="whiteH"/>
-            <input type="button" name="button" class="tealH"/>
-            <input type="button" name="button" class="spicyMixH"/>
-          </div>
-          <div class = "switchHeadTwo">
-            <input type = "button" name "button" class = "purpleH"/>
-            <input type = "button" name "button" class = "pinkH"/>
-            <input type = "button" name "button" class = "yellowH"/>
-          </div>
-          <hr class = "line" align = "left" color = "#0b6069">
-          <p class = "subText">Change the Background</p>
-          <div class = "switchColor">
-            <input type="button" name="button" class="white"/>
-            <input type="button" name="button" class="teal"/>
-            <input type="button" name="button" class="spicyMix"/>
-          </div>
-          <div class = "switchColorTwo">
-            <input type = "button" name "button" class = "purple"/>
-            <input type = "button" name "button" class = "pink"/>
-            <input type = "image" src = "ditto.png" name "button" class = "customPic"/>
-          </div>
-  </div>
-</div>
-<div class = "notesAll">
-      <p><button id = "allNotes" data-tooltip="Notes">
-        <input type="image" src="notesIcon.png" name="button" class="notes"/>
-      </button></p>
-      <div id="smokeNotes"></div>
-      <div id="popupNotes">
-        <div id="popup_barNotes">Notes<span id="btn_closeNotes">X</span></div>
-        <div class = "flexNotes">
-          <div class = "chooseNote">
-            <button class = "buttonNote">
-              <p class = "titleNoteMenu"> What Is This For? </p>
-              <!-- <p class = "noteSubTextMenu">10/7/19</p> -->
-            </button>
-            <hr class = "noteLine" align = "left" color = "black">
-            <button class = "buttonNoteTwo">
-              <p class = "titleNoteMenu"> Cas Holman </p>
-              <p class = "noteSubTextMenu">10/19/19</p>
-            </button>
-            <hr class = "noteLine" align = "left" color = "black">
-            <button class = "buttonNoteThree">
-              <p class = "titleNoteMenu"> Climate Dystopia </p>
-              <p class = "noteSubTextMenu">10/25/19</p>
-            </button>
-            <hr class = "noteLine" align = "left" color = "black">
-          </div>
-          <div class = "textNotes">
-            <p class = "titleNote"> October 7, 2019 at 4:30PM </p>
-            <p class = "noteSubTitle">What's this for?</p>
-            <div class = "flexLine">
-              <hr class = "lineTitle" align = "center" color = "black">
-          </div>
-            <p class = "noteSubText" id = "subNoteOne"> formatted just like notes on an apple device, my notes are suppose to express what i have learned on a certain day or random thoughts or quotes that i like.</p>
-            <div class = "flexGIF">
-            <img class = "cuteGIF" src = "https://media1.giphy.com/media/23gh2I75LPNCtY9G67/giphy.gif">
-          </div>
-        </div>
-  </div>
-</div>
-</div>
-<!-- <div class = "gameTotal">
-        <p><button id = "allGame" data-tooltip="Arcade">
-        <input type="image" src="game.png" name="button" class="game" id = "gameStop"/></button></p>
-      <div id="smokeGame"></div>
-      <div id="popupGame">
-        <div id="popup_barGame">Arcade<span id="btn_closeGame">X</span></div>
-</div>
-</div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="indexTwo.js"></script>
-
-
-
-</body>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 </html>
