--- a/home.html
+++ b/home.html
@@ -103,10 +103,13 @@
           <div class = "justCodePage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
             <h1 class = "projectTitle">Just Coding Things </h1>
-            <p class = "projectPara"> an all-girls organization dedicated to helping <br>each other and others to know how to code </p>
-            <p class = "proText">Why Did I Start This Club?</p>
-            <p class = "proTextSub"></p>
-            <!-- <p class = "proTextTwo"> The Outcomes: </p> -->
+            <p class = "projectPara"> an all-girls organization dedicated to helping each other and others to know how to code </p>
+            <img class = "logoJustCode" src = "justCode.png">
+            <button type="button" class = "justCodeBut">website</button>
+            <p class = "proText">why i did this?</p>
+            <p class = "proTextSub">seeing only a few amount of girls in my AP Computer Science Principles class, I was unsuprised. However, I quickly found out that many girls didn't want to take the class because they felt pressured that it was hard and too many stereotypes were put on girls in CS. I wanted to create a unique & supportive sisterhood for girls at WR who want to pursue Computer Science</p>
+            <p class = "proTextTwo"> how i contributed </p>
+            <p class = "proTextThree"> the outcomes and effects: </p>
           </div>
 
           <div class = "redesignPage">
