--- a/home.html
+++ b/home.html
@@ -93,27 +93,31 @@
             <input type="image" src="justCode.png" name="button" class="justCode"/>
             <p class = "justCodeText"> JUST CODING THINGS </p>
             <input type="image" src="redesign.png" name="button" class="redesign"/>
-            <p class = "redesignText"> REDESIGN & <br> CREATE</p>
+            <p class = "redesignText"> PHOEBE'S CREATIONS</p>
           </div>
           <div class = "pseudoPage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
             <h1 class = "projectTitleF">Pseudo </h1>
-            <p class = "projectPara">a game falksdjflkd </p>
+            <p class = "projectPara">an online web game based on online predators and how to identify and approach one if one were ever put in the situation </p>
+            <p class = "proText">why i did this?</p>
+
           </div>
           <div class = "justCodePage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
             <h1 class = "projectTitle">Just Coding Things </h1>
             <p class = "projectPara"> an all-girls organization dedicated to helping each other and others to know how to code </p>
             <img class = "logoJustCode" src = "justCode.png">
-            <button type="button" class = "justCodeBut">website</button>
+            <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">website</button></a>
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub">seeing only a few amount of girls in my AP Computer Science Principles class, I was unsuprised. However, I quickly found out that many girls didn't want to take the class because they felt pressured that it was hard and too many stereotypes were put on girls in CS. I wanted to create a unique & supportive sisterhood for girls at WR who want to pursue Computer Science</p>
-            <p class = "proTextTwo"> how i contributed </p>
-            <p class = "proTextThree"> the outcomes and effects: </p>
+            <!-- <p class = "proTextTwo"> how i contributed </p>
+            <p class = "proTextThree"> the outcomes and effects: </p> -->
           </div>
 
           <div class = "redesignPage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <h1 class = "projectTitle">Phoebe's Creations </h1>
+
           </div>
         </div>
       </div>
@@ -142,7 +146,9 @@
 <div class = "curositiesIphone">
           <a href = "curosities.html"><input type="image" src="projectsApp.png" name="button" class = "curositiesP"/></a>
 </div>
+          <section class="row row-test">
         <input type="image" src="table.png" name="button" class="table"/>
+      </section>
         <div class = "homeIphone">
           <a href = "index.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
         </div>
