--- a/home.html
+++ b/home.html
@@ -153,6 +153,8 @@
           <a href = "index.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
         </div>
       <p>
+<div class = "flexTabAgain">
+<section class = "rowTwo row-test">
         <button id = "allMail" data-tooltip="Send Me Some Mail">
         <a href="mailto:bphoebew@gmail.com" target="_top"><input type="image" src="mail.png" name="button" class="mail" id = "mailStop"/></a></button>
       </p>
@@ -226,6 +228,8 @@
   </div>
 </div>
 </div>
+      </section>
+    </div>
 <!-- <div class = "gameTotal">
         <p><button id = "allGame" data-tooltip="Arcade">
         <input type="image" src="game.png" name="button" class="game" id = "gameStop"/></button></p>
