--- a/home.html
+++ b/home.html
@@ -153,7 +153,7 @@
           <a href = "index.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
         </div>
       <p>
-<div class = "flexTabAgain">
+<div class = "flexTableAgain">
 <section class = "rowTwo row-test">
         <button id = "allMail" data-tooltip="Send Me Some Mail">
         <a href="mailto:bphoebew@gmail.com" target="_top"><input type="image" src="mail.png" name="button" class="mail" id = "mailStop"/></a></button>
