--- a/home.html
+++ b/home.html
@@ -72,9 +72,6 @@
     </div>
         </div>
     </div>
-<div class = "aboutIphone">
-  <a href = "about.html"><input type="image" src="aboutApp.png" name="button" class = "aboutP"/></a>
-</div>
     <div class = "projectsAll">
       <div id="mydivTwo">
         <div id="mydivheader">
@@ -121,9 +118,6 @@
           </div>
         </div>
       </div>
-      <div class = "projectsIphone">
-        <a href = "projects.html"><input type="image" src="projectsApp.png" name="button" class = "projectsP"/></a>
-      </div>
       <div class = "curositiesAll">
         <div id="mydivThree">
           <div id="mydivheader">
@@ -143,15 +137,9 @@
             </div>
           </div>
         </div>
-<div class = "curositiesIphone">
-          <a href = "curosities.html"><input type="image" src="projectsApp.png" name="button" class = "curositiesP"/></a>
-</div>
           <section class="row row-test">
         <input type="image" src="table.png" name="button" class="table"/>
       </section>
-        <div class = "homeIphone">
-          <a href = "index.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
-        </div>
       <p>
 <div class = "flexTableAgain">
 <section class = "rowTwo row-test">
@@ -238,6 +226,24 @@
         <div id="popup_barGame">Arcade<span id="btn_closeGame">X</span></div>
 </div>
 </div> -->
+<div class = "allPhone">
+<div class = "aboutIphone">
+  <a href = "about.html"><input type="image" src="aboutApp.png" name="button" class = "aboutP"/></a>
+</div>
+
+<div class = "projectsIphone">
+  <a href = "projects.html"><input type="image" src="projectsApp.png" name="button" class = "projectsP"/></a>
+</div>
+
+<div class = "curositiesIphone">
+          <a href = "curosities.html"><input type="image" src="projectsApp.png" name="button" class = "curositiesP"/></a>
+</div>
+</div>
+<div class = "flexHome">
+<div class = "homeIphone">
+  <a href = "index.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
+</div>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="home.js"></script>
 
