--- a/home.html
+++ b/home.html
@@ -90,7 +90,9 @@
             <input type="image" src="justCode.png" name="button" class="justCode"/>
             <p class = "justCodeText"> JUST CODING THINGS </p>
             <input type="image" src="redesign.png" name="button" class="redesign"/>
-            <p class = "redesignText"> PHOEBE'S CREATIONS</p>
+            <p class = "redesignText"> PHOEBE'S <br>CREATIONS</p>
+            <input type="image" src="lucyLogo.png" name="button" class="lucy"/>
+            <p class = "lucyText"> LUCY'S <br>PSYCHIATRY</p>
           </div>
           <div class = "pseudoPage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
@@ -104,18 +106,25 @@
             <h1 class = "projectTitle">Just Coding Things </h1>
             <p class = "projectPara"> an all-girls organization dedicated to helping each other and others to know how to code </p>
             <img class = "logoJustCode" src = "justCode.png">
-            <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">website</button></a>
+            <!-- <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">website</button></a> -->
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub">seeing only a few amount of girls in my AP Computer Science Principles class, I was unsuprised. However, I quickly found out that many girls didn't want to take the class because they felt pressured that it was hard and too many stereotypes were put on girls in CS. I wanted to create a unique & supportive sisterhood for girls at WR who want to pursue Computer Science</p>
-            <!-- <p class = "proTextTwo"> how i contributed </p>
-            <p class = "proTextThree"> the outcomes and effects: </p> -->
+            <p class = "proTextTwo"> how i contributed </p>
+            <p class = "proTextSubTwo">as the founder and president, i try to make </p>
+            <p class = "proTextThree"> the outcomes: </p>
+            <p class = "proTextSubThree"></p>
           </div>
 
           <div class = "redesignPage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
             <h1 class = "projectTitle">Phoebe's Creations </h1>
-
           </div>
+
+          <div class = "lucyPage">
+            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <h1 class = "projectTitle"> Lucy's Psychiatry </h1>
+          </div>
+
         </div>
       </div>
       <div class = "curositiesAll">
