--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
   <img class = "picsPage" src = "IMG_0466.jpg" id = "marathon">
   <img class = "picsPage" src = "dittowall.jpg" id = "track">
   <img class = "picsPage" src = "dittowall.jpg" id = "yea">
-  <h1 id = "maraText"> hi </h1>
+  <h1 id = "maraText"> here's a picture of my sister. she's my number one supporter and i love her!! we love eating chick-fil-a and in-n-out </h1>
   <h1 id = "trackText">hello </h1>
   <h1 id = "yeaText"> hey </h1>
 </div>
@@ -93,6 +93,8 @@
             <p class = "redesignText"> PHOEBE'S <br>CREATIONS</p>
             <input type="image" src="lucyLogo.png" name="button" class="lucy"/>
             <p class = "lucyText"> LUCY'S <br>PSYCHIATRY</p>
+            <input type="image" src="night.gif" name="button" class="shetem"/>
+            <p class = "shetemText"> S(HE)TEM</p>
           </div>
           <div class = "pseudoPage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
@@ -106,23 +108,35 @@
             <h1 class = "projectTitle">Just Coding Things </h1>
             <p class = "projectPara"> an all-girls organization dedicated to helping each other and others to know how to code </p>
             <img class = "logoJustCode" src = "justCode.png">
-            <!-- <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">website</button></a> -->
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub">seeing only a few amount of girls in my AP Computer Science Principles class, I was unsuprised. However, I quickly found out that many girls didn't want to take the class because they felt pressured that it was hard and too many stereotypes were put on girls in CS. I wanted to create a unique & supportive sisterhood for girls at WR who want to pursue Computer Science</p>
             <p class = "proTextTwo"> how i contributed </p>
-            <p class = "proTextSubTwo">as the founder and president, i try to make </p>
+            <p class = "proTextSubTwo">as the founder and president, i try to make the club as inviting as possible. every meeting i would make the slides and be the teacher for the whole club</p>
             <p class = "proTextThree"> the outcomes: </p>
-            <p class = "proTextSubThree"></p>
+            <p class = "proTextSubThree">-in the 2018-2019 school year, we were able to help 8 girls to learn how to code, with no prior knowledge <br><br> -in the 2019-2020 school year, we opened our club up to guys who wanted to learn web development</p>
+            <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">website</button></a>
           </div>
 
           <div class = "redesignPage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
             <h1 class = "projectTitle">Phoebe's Creations </h1>
+            <p class = "projectPara"> my own little website dedicated to displaying my cool designs and getting people to hire me for their website work :D </p>
+            <img class = "logoJustCode" src = "redesign.png">
+            <p class = "proText">why i did this?</p>
+            <p class = "proTextSub">after going to kode with klossy, i realized that i really loved to spend my time coding and designing websites. because of this, i wanted to put my website work out there on the internet :P<br><br> i also wanted to bring back and finish the old industrial designs that i did in my notebook as a kid and add more to it</p>
+            <p class = "exampleText">Some Projects On Phoebe's Creations</p>
+            <p class = "exampleSub"></p>
           </div>
 
           <div class = "lucyPage">
             <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
             <h1 class = "projectTitle"> Lucy's Psychiatry </h1>
+            <p class = "projectPara"> my own little website dedicated to displaying my cool designs and getting people to hire me for their website work :D </p>
+          </div>
+
+          <div class = "shetemPage">
+            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <h1 class = "projectTitleS"> S(HE)TEM </h1>
           </div>
 
         </div>
@@ -140,7 +154,7 @@
           <div id="popupThree">
             <div id="popup_barThree">Curosities<span id="btn_closeThree">X</span></div>
             <div class = "curosPageOne">
-              <img class = "picsPage" src = "memeish.jpg" id = "yayoi">
+              <img class = "picsPage" src = "yayoi.jpg" id = "yayoi">
               <img class = "picsPage" src = "memeish.jpg" id = "webDesign">
               <img class = "picsPage" src = "memeish.jpg" id = "ar">
             </div>
