--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
   <img class = "picsPage" src = "IMG_0466.jpg" id = "marathon">
   <img class = "picsPage" src = "dittowall.jpg" id = "track">
   <img class = "picsPage" src = "dittowall.jpg" id = "yea">
-  <h1 id = "maraText"> here's a picture of my sister. she's my number one supporter and i love her!! we love eating chick-fil-a and in-n-out </h1>
+  <h1 id = "maraText"> here's a picture of my sister. she's my number one supporter and i love her!! we love eating chic-fil-a and in-n-out </h1>
   <h1 id = "trackText">hello </h1>
   <h1 id = "yeaText"> hey </h1>
 </div>
@@ -67,8 +67,8 @@
       <hr class = "lineAbout" align = "center" color = "#0b6069">
     </div>
     <div class = "arrows">
-      <input type = "image" src = "https://www.stickpng.com/assets/images/585e473bcb11b227491c3381.png" name = "button" class = "leftArrow">
-      <input type = "image" src = "https://cdn1.iconfinder.com/data/icons/mini-solid-icons-vol-1/16/24-512.png" name = "button" class = "rightArrow">
+      <input type = "image" src = "aboutArrowL.png" name = "button" class = "leftArrow">
+      <input type = "image" src = "aboutArrowR.png" name = "button" class = "rightArrow">
     </div>
         </div>
     </div>
@@ -85,7 +85,7 @@
         <div id="popupTwo">
           <div id="popup_barTwo">Projects<span id="btn_closeTwo">X</span></div>
           <div class = "menuProject">
-            <input type="image" src="pseudo.png" name="button" class="pseudo"/>
+            <input type="image" src="pseudoLogo.png" name="button" class="pseudo"/>
             <p class = "pseudoText"> PSEUDO </p>
             <input type="image" src="justCode.png" name="button" class="justCode"/>
             <p class = "justCodeText"> JUST CODING THINGS </p>
@@ -97,14 +97,18 @@
             <p class = "shetemText"> S(HE)TEM</p>
           </div>
           <div class = "pseudoPage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitleF">Pseudo </h1>
+            <img class = "logoJustCode" src = "pseudoLogo.png">
             <p class = "projectPara">an online web game based on online predators and how to identify and approach one if one were ever put in the situation </p>
             <p class = "proText">why i did this?</p>
-
+            <p class = "proTextSub">i know many friends that are catfished. they didn't know </p>
+            <p class = "proTextTwo"> how i contributed </p>
+            <p class = "proTextSubTwo"> as a co-founder & lead web designer, i tried to </p>
+                        <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">game</button></a>
           </div>
           <div class = "justCodePage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitle">Just Coding Things </h1>
             <p class = "projectPara"> an all-girls organization dedicated to helping each other and others to know how to code </p>
             <img class = "logoJustCode" src = "justCode.png">
@@ -118,7 +122,7 @@
           </div>
 
           <div class = "redesignPage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitle">Phoebe's Creations </h1>
             <p class = "projectPara"> my own little website dedicated to displaying my cool designs and getting people to hire me for their website work :D </p>
             <img class = "logoJustCode" src = "redesign.png">
@@ -129,15 +133,18 @@
           </div>
 
           <div class = "lucyPage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitle"> Lucy's Psychiatry </h1>
-            <p class = "projectPara"> my own little website dedicated to displaying my cool designs and getting people to hire me for their website work :D </p>
+            <p class = "projectPara"> bringing affordable and confidential mental wellness resources to santa clarita</p>
+            <img class = "logoLucy" src = "lucyLogo.png">
           </div>
 
           <div class = "shetemPage">
-            <input type = "image" src = "https://www.jing.fm/clipimg/detail/243-2434452_back-arrow-white-back-button-ios.png" name = "button" class = "backProject">
+            <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitleS"> S(HE)TEM </h1>
+            <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
           </div>
+
 
         </div>
       </div>
@@ -264,7 +271,7 @@
 </div>
 <div class = "flexHome">
 <div class = "homeIphone">
-  <a href = "index.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
+  <a href = "home.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></button></p></a>
 </div>
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
